k8s-libreria/backend.yml
# DEPLOYMENT archivo que contiene la configuración del POT de MongoDB el cual vamos a desplegar.
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment # tipo de archivo para poderlo identificar.
  labels:
    app: backend
spec: # especificación
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec: # sección de contenedores que vayamos a montar.
      containers:
      - name: backend
        image: humbertoto22/libreria_futuro:latest
        ports:
        - containerPort: 8080
