k8s-libreria/mongo-express.yml
# DEPLOYMENT archivo que contiene la configuración del POT de mongo-express el cual vamos a desplegar.
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-express-deployment # tipo de archivo para poderlo identificar.
  labels:
    app: mongo-express
spec: # especificación
  replicas: 1
  selector:
    matchLabels:
      app: mongo-express
  template:
    metadata:
      labels:
        app: mongo-express
    spec: # sección de contenedores que vayamos a montar.
      containers:
      - name: mongo-express
        image: mongo-express:1.0.0-alpha.4
        ports:
        - containerPort: 8081
